# routes/index.js
@@ -12,4 +12,15 @@ router.use('/products', require('./products'));
 
 router.use('/deliveries', require('./delivery'));
 
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if(err) {
+            return next(err);
+        }
+        res.redirect('/');
+    });
+});
+
 module.exports = router;
