# server.js
@@ -1,6 +1,13 @@
 const express = require('express');
 const bodyParser = require('body-parser');
+const dotenv = require('dotenv').config();
 const mongodb = require('./data/database');
+const MongoStore = require('connect-mongo');
+const passport = require('passport');
+const session = require('express-session');
+const GithubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
+
 
 
 const port = process.env.PORT || 3000;
@@ -8,6 +15,17 @@ const app = express();
 
 app.use(bodyParser.json());
 
+app.use(session({
+    secret: "your-secret-key",
+    resave: false,
+    saveUninitialized: false,
+    store: MongoStore.create({ mongoUrl: process.env.MONGODB_URL }),
+    cookie: { secure: false, httpOnly: false }  // Allow cookies for Swagger
+}));
+
+app.use(passport.initialize());
+
+app.use(passport.session());
 
 app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
@@ -16,7 +34,35 @@ app.use((req, res, next) => {
     next();
 });
 
-app.use('/', require('./routes'));
+app.use(cors({methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']}));
+app.use(cors({origin: ['https://final-project-cb6l.onrender.com'], credentials: true}));
+app.use('/' , require('./routes'));
+
+passport.use(new GithubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.GITHUB_CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+    return done(null, profile);
+}));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+
+passport.deserializeUser((user, done) => {
+    done(null, user);
+});
+
+app.get('/', (req, res) => {res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : 'Logged out')});
+
+app.get('/github/callback', passport.authenticate('github',
+    { failureRedirect: '/api-docs'}),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    });
 
 mongodb.initDb((err) => {
     if(err) {
